@@ -24,3 +24,4 @@ complete change log
 * Fixed the help string in ApbsClient.py .
 * Fixed a bug in Vacc_atomdSASA(): the atom SASA needs to be reset to zero displacement after finite melement methods.
 * Fixed a bug in Vpmg_dbForce(): the initialization of rtot should appear before it is used.
+* Fixed a bug in initAPOL(): center should be initialized before used.
